<resources>
    <string name="app_name">tripleD</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="drowsiness_title">Driver Drowsiness Detection</string>
    <string name="drowsiness_subtitle">Stay alert, stay safe.\nTap below to start monitoring your alertness in real time.</string>
    <string name="start_detection">🚨  Start Detection</string>
    <string name="drowsiness_icon_desc">Drowsiness detection icon</string>
    <string name="go_to_detection">Start Drowsiness Detection</string>
</resources>